# vita

./: .gitignore  README.md  install_depend.sh
src/: CMakeLists.txt
src/dictionary/: CMakeLists.txt  dictionary.cpp  dictionary.h  test_dictionary.cpp
src/include/: OptionParser.h  crfsuite.h  crfsuite.hpp  crfsuite_api.hpp  dictionary.h  os.h  text2feat.h  text_util.h  vncommon.h
src/option_parser/: CMakeLists.txt
src/text2feat/: CMakeLists.txt  text2feat.cpp  text2feat.h
src/text_util/: CMakeLists.txt  text_util.cpp  text_util.h  text_util_test.cpp
src/vita/: CMakeLists.txt  vita.cpp  vita.h
src/vita_ana/: CMakeLists.txt  vita_ana.cpp  vita_ana.h  vita_ana_server.cpp
src/vncommon/: CMakeLists.txt  logging.cpp  vncommon.cpp  vncommon.h  vncommon_test.cpp
src/vncommon_py/: .gitignore  Makefile  test.py  text_util.cpp  text_util.h  vncommon.cpp  vncommon.h  vncommon.i
