cmake_minimum_required (VERSION 2.8)
set(CMAKE_BUILD_TYPE Debug)
PROJECT(vita)
if(UNIX)
        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
endif()

add_subdirectory (option_parser)
add_subdirectory (text_util)
add_subdirectory (dictionary)
add_subdirectory (text2feat)
add_subdirectory (vncommon)
add_subdirectory (vita_ana)
add_subdirectory (vita)
